What is new in 4.00_04 - Wednesday, February 16, 2005

    * FIX: Minor fix in tests suits and error-checking routines of
      serializers and id-generators

What is new in 4.00_03 - Friday, February 11, 2005

    * NEW: CGI::Session::find() introduced
    * NEW: traverse() introduced into drivers to support CGI::Session::find()
    * DOCS: More complete driver specs documented

What is new in 4.00_02 - Wednesday, February 09, 2005

    * FIX: race conditions in Driver/file.pm pointed out by Martin Bartosch

What is new in 4.00_01 - Wednesday, February 09, 2005

    * NEW: load() - constructor method to prevent unnecessary session creations
    * NEW: is_expired() - method to intercept expired sessions
    * NEW: is_empty() - to intercept requests for unexisting sessions
    * NEW: more optimized source code
    * NEW: updated and improved driver specs
    * NEW: standard testing framework
    * NEW: 'sqlite' driver


What is new in 3.12?

	* cache() method introduced, which is normally used
          by library drivers to cache certain value within the single process
	* Apache::Session-like tie interface supported (EXPERIMENTAL!)
	* trace() and tracemsg() methods added for debugging purposes

What is new in 3.8?

	* Abbreviations in DSN parameters are supported via Text::Abbrev.
	* Automatic api3 detection makes "-api3" switch obsolete
	* Experimental "-frozen" switch added, but not yet functional.
	* sync_param() utility function added
	* header() replacement to CGI::header() added, which outputs
	  proper HTTP headers with session information
	* Private data records have been documented.
	* Bug in clear() kept failing if passed no arguments to be cleared.



What is new in 3.x?

	* Ability to choose between serializers, drivers and id generators
	  while creating the session object. Supported via '-api3' switch.
	* New serializers added: Storable, FreezeThaw in addition to Default.
	* New ID generator added: Incr, which generates auto incrementing