@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         CGI-Session
-version:      4.00_04
+version:      4.00_05
 version_from: Session.pm
 installdirs:  site
 requires:
